--- a/src/global/core/shared/variables.scss
+++ b/src/global/core/shared/variables.scss
@@ -105,7 +105,7 @@
   @include mq($from: wide) {
     --page-base-offset-responsive: var(--layout-base-offset-responsive-wide);
   }
-  @include mq($from: wide--max-content) {
+  @include mq($from: ultra) {
     --page-base-offset-responsive: 0;
   }
 
