--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -6,61 +6,70 @@
 
 :host {
   --sbb-card-background-color: var(--sbb-color-white-default);
-  --sbb-card-padding-inline: var(--sbb-spacing-responsive-xxs);
-  --sbb-card-padding-block-start: var(--sbb-spacing-fixed-3x);
-  --sbb-card-padding-block-end: var(--sbb-card-padding-block-start);
   --sbb-card-border-radius: var(--sbb-border-radius-4x);
   --sbb-card-animation-duration: var(--sbb-animation-duration-1x);
   --sbb-card-animation-easing: var(--sbb-animation-easing);
   --sbb-card-border-color: transparent;
+  --sbb-card-hover-shift: #{sbb.px-to-rem-build(2)};
 }
 
 :host([negative]:not([negative='false'])) {
   --sbb-card-background-color: var(--sbb-color-milk-default);
 }
 
+:host([active]:not([active='false'])) {
+  --sbb-card-border-color: var(--sbb-color-smoke-default);
+}
+
+:host([size='xs']) {
+  --sbb-card-padding-inline: var(--sbb-spacing-responsive-xxs);
+  --sbb-card-padding-block-start: var(--sbb-spacing-fixed-3x);
+  --sbb-card-padding-block-end: var(--sbb-card-padding-block-start);
+}
+
 :host([size='s']) {
+  --sbb-card-padding-inline: var(--sbb-spacing-responsive-xxs);
   --sbb-card-padding-block-start: var(--sbb-spacing-responsive-xxxs);
+  --sbb-card-padding-block-end: var(--sbb-card-padding-block-start);
 }
 
 :host([size='m']) {
   --sbb-card-padding-inline: var(--sbb-spacing-responsive-s);
   --sbb-card-padding-block-start: var(--sbb-spacing-responsive-xxxs);
+  --sbb-card-padding-block-end: var(--sbb-card-padding-block-start);
 }
 
 :host([size='l']) {
+  --sbb-card-padding-inline: var(--sbb-spacing-responsive-xxs);
   --sbb-card-padding-block-start: var(--sbb-spacing-fixed-4x);
+  --sbb-card-padding-block-end: var(--sbb-card-padding-block-start);
 }
 
 :host([size='xl']) {
+  --sbb-card-padding-inline: var(--sbb-spacing-responsive-xxs);
   --sbb-card-padding-block-start: var(--sbb-spacing-responsive-xxs);
+  --sbb-card-padding-block-end: var(--sbb-card-padding-block-start);
 }
 
 :host([size='xxl']) {
   --sbb-card-padding-inline: var(--sbb-spacing-responsive-s);
   --sbb-card-padding-block-start: var(--sbb-spacing-responsive-s);
+  --sbb-card-padding-block-end: var(--sbb-card-padding-block-start);
 }
 
-:host(.sbb-card--has-badge[size='m']),
-:host(.sbb-card--has-badge[size='l']),
-:host(.sbb-card--has-badge[size='xl']) {
+:host([data-has-badge][size='m']) {
   --sbb-card-padding-block-start: var(--sbb-spacing-fixed-6x);
-}
-
-:host(.sbb-card--has-badge[size='m']) {
   --sbb-card-padding-block-end: var(--sbb-spacing-responsive-xxxs);
 }
 
-:host(.sbb-card--has-badge[size='l']) {
+:host([data-has-badge][size='l']) {
+  --sbb-card-padding-block-start: var(--sbb-spacing-fixed-6x);
   --sbb-card-padding-block-end: var(--sbb-spacing-fixed-4x);
 }
 
-:host(.sbb-card--has-badge[size='xl']) {
+:host([data-has-badge][size='xl']) {
+  --sbb-card-padding-block-start: var(--sbb-spacing-fixed-6x);
   --sbb-card-padding-block-end: var(--sbb-spacing-responsive-xxs);
-}
-
-:host([active]:not([active='false'])) {
-  --sbb-card-border-color: var(--sbb-color-smoke-default);
 }
 
 .sbb-card {
@@ -74,7 +83,12 @@
   padding-block-end: var(--sbb-card-padding-block-end);
   border-radius: var(--sbb-card-border-radius);
   background-color: var(--sbb-card-background-color);
-  transition: box-shadow var(--sbb-card-animation-duration) var(--sbb-card-animation-easing);
+  transition: {
+    duration: var(--sbb-card-animation-duration);
+    timing-function: var(--sbb-card-animation-easing);
+    property: box-shadow, padding;
+  }
+
   color: inherit;
   text-decoration: none;
 
@@ -106,18 +120,9 @@
   @include sbb.hover-mq($hover: true) {
     :host(:not([active]:not([active='false'])):hover) & {
       @include sbb.shadow-level-9-hard;
-    }
-  }
-}
 
-.sbb-card__content {
-  display: block;
-  height: 100%;
-  transition: transform var(--sbb-card-animation-duration) var(--sbb-card-animation-easing);
-
-  @include sbb.hover-mq($hover: true) {
-    :host(:not([active]:not([active='false'])):hover) & {
-      transform: translateY(#{sbb.px-to-rem-build(-2)});
+      padding-block-start: calc(var(--sbb-card-padding-block-start) - var(--sbb-card-hover-shift));
+      padding-block-end: calc(var(--sbb-card-padding-block-end) + var(--sbb-card-hover-shift));
     }
   }
 }
@@ -128,6 +133,6 @@
 
 // We remove upper margin from all titles
 // as we do not expect multiple titles to be used inside a card.
-.sbb-card__content ::slotted(sbb-title) {
+::slotted(sbb-title) {
   margin-block-start: 0;
 }
