--- a/src/components/sbb-checkbox-group/sbb-checkbox-group.scss
+++ b/src/components/sbb-checkbox-group/sbb-checkbox-group.scss
@@ -7,7 +7,6 @@
 @mixin horizontal-orientation {
   --sbb-checkbox-group-orientation: row;
   --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-6x);
-  --sbb-checkbox-group-width: max-content;
   --sbb-checkbox-group-checkbox-width: auto;
 }
 
@@ -26,6 +25,11 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 :host([data-has-selection-panel]) {
   --sbb-checkbox-group-width: 100%;
+  --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-4x);
+}
+
+:host([data-has-selection-panel][orientation='vertical']) {
+  --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-2x);
 }
 
 @each $breakpoint in $breakpoints {
@@ -33,6 +37,12 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
     // horizontal-from overrides orientation vertical
     :host([orientation='vertical'][horizontal-from='#{$breakpoint}']) {
       @include horizontal-orientation;
+    }
+
+    :host(
+        [orientation='vertical'][horizontal-from='#{$breakpoint}']:not([data-has-selection-panel])
+      ) {
+      --sbb-checkbox-group-width: max-content;
     }
   }
 }
