--- a/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
+++ b/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
@@ -24,6 +24,11 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 :host([data-has-selection-panel]) {
   --sbb-radio-button-group-width: 100%;
+  --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-4x);
+}
+
+:host([data-has-selection-panel][orientation='vertical']) {
+  --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-2x);
 }
 
 @each $breakpoint in $breakpoints {
