--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -17,10 +17,30 @@
   );
 }
 
-:host(:focus-visible) {
+:host(:focus-visible:not([data-within-selection-panel])) {
   @include sbb.focus-outline;
 
   border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
+}
+
+:host(:focus-visible[data-within-selection-panel]) {
+  outline: none;
+
+  .sbb-radio-button__label-slot::after {
+    content: '';
+    position: absolute;
+    display: block;
+    inset-block: calc(
+      (var(--sbb-spacing-responsive-xs) * -1) + var(--sbb-focus-outline-width) -
+        (var(--sbb-focus-outline-offset) * 2)
+    );
+    inset-inline: calc(
+      (var(--sbb-spacing-responsive-xxs) * -1) + var(--sbb-focus-outline-width) -
+        (var(--sbb-focus-outline-offset) * 2)
+    );
+    border: var(--sbb-focus-outline-color) solid var(--sbb-focus-outline-width);
+    border-radius: #{sbb.px-to-rem-build(10)};
+  }
 }
 
 :host([data-group-disabled]),
