--- a/src/components/sbb-selection-panel/sbb-selection-panel.scss
+++ b/src/components/sbb-selection-panel/sbb-selection-panel.scss
@@ -5,24 +5,54 @@
 @include sbb.host-component-properties;
 
 :host {
-  --sbb-selection-panel-background: var(--sbb-color-milk-default);
+  --sbb-selection-panel-cursor: pointer;
+  --sbb-selection-panel-background: var(--sbb-color-white-default);
+  --sbb-selection-panel-border-color: var(--sbb-color-cloud-default);
+  --sbb-selection-panel-animation-duration: var(--sbb-animation-duration-4x);
+  --sbb-selection-panel-badge-background: var(--sbb-color-black-default);
 
   display: contents;
+}
+
+:host([color='milk']) {
+  --sbb-selection-panel-background: var(--sbb-color-milk-default);
+}
+
+:host([data-has-content][data-checked]:not([data-checked='false'])) {
+  --sbb-selection-panel-border-color: var(--sbb-color-charcoal-default);
+}
+
+:host([data-disabled]:not([data-disabled='false'])) {
+  --sbb-selection-panel-cursor: default;
+  --sbb-selection-panel-badge-background: var(--sbb-color-smoke-default);
+}
+
+:host([disable-animation]:not([disable-animation='false'])) {
+  --sbb-selection-panel-animation-duration: 0s;
 }
 
 .sbb-selection-panel {
   flex: auto;
   position: relative;
+  width: 100%;
   background-color: var(--sbb-selection-panel-background);
+  border: var(--sbb-border-width-1x) solid var(--sbb-selection-panel-border-color);
   border-radius: var(--sbb-border-radius-4x);
+
+  transition: {
+    duration: var(--sbb-selection-panel-animation-duration);
+    timing-function: var(--sbb-animation-easing);
+    property: border-color;
+  }
 }
 
 .sbb-selection-panel__badge {
+  user-select: none;
   pointer-events: none;
   position: absolute;
   width: 100%;
   height: 100%;
-  border-radius: var(--sbb-border-radius-4x);
+  border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-border-width-1x));
   overflow: hidden;
 }
 
@@ -30,51 +60,48 @@
   visibility: hidden;
   max-height: 0;
   opacity: 0;
-  border-top: var(--sbb-border-width-1x) solid var(--sbb-color-cloud-default);
-  margin-inline: var(--sbb-spacing-responsive-xxs);
-  transition: max-height var(--sbb-animation-duration-4x) var(--sbb-animation-easing),
-    padding var(--sbb-animation-duration-4x) var(--sbb-animation-easing),
-    opacity var(--sbb-animation-duration-4x) var(--sbb-animation-duration-4x)
-      var(--sbb-animation-easing);
+  padding-inline: var(--sbb-spacing-responsive-xxs);
+  transition: max-height var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
+    padding var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
+    opacity var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing);
 
-  :host([data-has-content][checked]) & {
+  :host([data-has-content][force-open]:not([force-open='false'])) &,
+  :host([data-has-content][data-checked]:not([data-checked='false'])) & {
     visibility: visible;
     max-height: calc(
       var(--sbb-selection-panel-content-height) + var(--sbb-spacing-responsive-xxs) +
         var(--sbb-spacing-responsive-xs)
     );
     opacity: 1;
-    padding-block-start: var(--sbb-spacing-responsive-xxs);
     padding-block-end: var(--sbb-spacing-responsive-xs);
+    transition: max-height var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
+      padding var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
+      opacity var(--sbb-selection-panel-animation-duration)
+        var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing);
   }
 }
 
-slot[name='content']::slotted(*) {
-  opacity: 0;
-  transition: {
-    duration: var(--sbb-animation-duration-4x);
-    timing-function: var(--sbb-animation-easing);
-    property: opacity;
-  }
+sbb-divider {
+  margin-block-end: var(--sbb-spacing-responsive-xxs);
+}
 
-  :host([data-has-content][checked]) & {
-    opacity: 1;
-    transition-delay: var(--sbb-animation-duration-4x);
-  }
+::slotted(sbb-card-badge) {
+  --sbb-card-badge-background-color-primary: var(--sbb-selection-panel-badge-background);
 }
 
 ::slotted(sbb-radio-button),
 ::slotted(sbb-checkbox) {
-  cursor: pointer;
+  cursor: var(--sbb-selection-panel-cursor);
   display: block;
   padding: var(--sbb-spacing-responsive-xs) var(--sbb-spacing-responsive-xxs);
   transition: {
-    duration: var(--sbb-animation-duration-4x);
+    duration: var(--sbb-selection-panel-animation-duration);
     timing-function: var(--sbb-animation-easing);
     property: padding;
   }
 
-  :host([data-has-content][checked]) & {
+  :host([data-has-content][force-open]:not([force-open='false'])) &,
+  :host([data-has-content][data-checked]:not([data-checked='false'])) & {
     padding-block-end: var(--sbb-spacing-responsive-xxs);
   }
 }
