--- a/src/components/sbb-map-container/sbb-map-container.scss
+++ b/src/components/sbb-map-container/sbb-map-container.scss
@@ -13,6 +13,13 @@
     var(--sbb-map-container-map-height-zero) + var(--sbb-border-radius-4x)
   );
   --sbb-map-container-border-radius: var(--sbb-border-radius-4x);
+  --sbb-map-container-animation-duration: var(--sbb-animation-duration-4x);
+
+  @include sbb.mq($from: small) {
+    --sbb-map-container-map-height: calc(
+      var(--sbb-map-container-map-height-small) + var(--sbb-map-container-border-radius)
+    );
+  }
 }
 
 .sbb-map-container {
@@ -32,13 +39,22 @@
 
 .sbb-map-container__sidebar-button {
   position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
   inset-block-end: var(--sbb-spacing-fixed-5x);
-  inset-inline: 0;
-  text-align: center;
-  transition: opacity var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
   opacity: 0;
+  visibility: hidden;
 
-  :host([data-return-button-visible='true']) & {
+  // Hide transition, visibility should be delayed
+  transition: opacity var(--sbb-map-container-animation-duration) var(--sbb-animation-easing),
+    visibility var(--sbb-map-container-animation-duration) var(--sbb-animation-easing)
+      var(--sbb-map-container-animation-duration);
+
+  :host([data-scroll-up-button-visible]) & {
+    // Show transition
+    transition: visibility,
+      opacity var(--sbb-map-container-animation-duration) var(--sbb-animation-easing);
+    visibility: visible;
     opacity: 1;
   }
 
@@ -78,12 +94,6 @@
   grid-row: 1 / 2;
   grid-column: 1 / 3;
   height: var(--sbb-map-container-map-height);
-
-  @include sbb.mq($from: small) {
-    --sbb-map-container-map-height: calc(
-      var(--sbb-map-container-map-height-small) + var(--sbb-map-container-border-radius)
-    );
-  }
 
   @include sbb.mq($from: medium) {
     grid-row: 1 / 3;
