--- a/src/components/sbb-map-container/sbb-map-container.scss
+++ b/src/components/sbb-map-container/sbb-map-container.scss
@@ -13,6 +13,13 @@
     var(--sbb-map-container-map-height-zero) + var(--sbb-border-radius-4x)
   );
   --sbb-map-container-border-radius: var(--sbb-border-radius-4x);
+  --sbb-map-container-animation-duration: var(--sbb-animation-duration-4x);
+
+  @include sbb.mq($from: small) {
+    --sbb-map-container-map-height: calc(
+      var(--sbb-map-container-map-height-small) + var(--sbb-map-container-border-radius)
+    );
+  }
 }
 
 .sbb-map-container {
@@ -27,6 +34,35 @@
     width: 100vw;
     height: calc(100vh - var(--sbb-map-container-margin-start, var(--sbb-header-height)));
     overflow: hidden;
+  }
+}
+
+.sbb-map-container__sidebar-button {
+  position: fixed;
+  left: 50%;
+  inset-block-end: var(--sbb-spacing-fixed-5x);
+  visibility: hidden;
+  opacity: 0;
+  transform: translateX(-50%) translateY(calc(100% + var(--sbb-spacing-fixed-5x)));
+
+  // Hide transition, visibility should be delayed
+  transition: opacity var(--sbb-map-container-animation-duration) var(--sbb-animation-easing),
+    visibility var(--sbb-map-container-animation-duration) var(--sbb-animation-easing)
+      var(--sbb-map-container-animation-duration),
+    transform var(--sbb-map-container-animation-duration) var(--sbb-animation-easing);
+
+  :host([data-scroll-up-button-visible]) & {
+    // Show transition
+    transition: visibility var(--sbb-map-container-animation-duration) var(--sbb-animation-easing),
+      opacity var(--sbb-map-container-animation-duration) var(--sbb-animation-easing),
+      transform var(--sbb-map-container-animation-duration) ease-out;
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(-50%) translateY(0);
+  }
+
+  @include sbb.mq($from: medium) {
+    display: none;
   }
 }
 
@@ -61,12 +97,6 @@
   grid-row: 1 / 2;
   grid-column: 1 / 3;
   height: var(--sbb-map-container-map-height);
-
-  @include sbb.mq($from: small) {
-    --sbb-map-container-map-height: calc(
-      var(--sbb-map-container-map-height-small) + var(--sbb-map-container-border-radius)
-    );
-  }
 
   @include sbb.mq($from: medium) {
     grid-row: 1 / 3;
